# monkeys_revisited

./: .gitignore  Pass_k_Sampling_Strategy_Simulation_with_Budget_Ablation.ipynb  README.md  bon_method_comparison.ipynb  code_contest_method_comparison.ipynb  jailbreaking_final.ipynb  method_comparison.ipynb  method_comparison_bon.ipynb  method_comparison_synthetic.ipynb  monkeys_final.ipynb  pyproject.toml  synthetic_final.ipynb
.run/: 00_bon_jailbreaking_text_eda.run.xml  01_large_language_monkeys_coding_eda.run.xml  02_large_language_monkeys_pythia_math_eda.run.xml  03_pretraining_math_eda.run.xml  05_many_shot_in_context_scaling.run.xml  06_bon_jailbreaking_vision_eda.run.xml  07_bon_jailbreaking_audio_eda.run.xml  08_large_language_monkeys_mini_f2f_eda.run.xml  50_pass@1_fits.run.xml  51_pass@1_compare_power_law_with_distributional_fit.run.xml  52_compare_power_law_exponent_estimators_synthetic_data.run.xml  53_compare_power_law_exponent_estimators_real_data.run.xml  60_pass@k_distributional_assumptions.run.xml  90_schematic_attempt_1.run.xml  90_schematic_attempt_2.run.xml  92_schematic_distributional_fitting.run.xml  92_schematic_distributional_fitting_attempt2.run.xml  compute_nll_for_msj.run.xml  evaluate_sampling_strategy.py.run.xml
data/: pythia69.csv
experiments/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
monkeys/: EM.py  analyze.py  bem_geometric.py  better_em.py  better_optimiation.py  mixtures.py  scaled_beta_binomial.py  scaling_utils.py  stats_utils.py
scripts/: compute_nll_for_many_shot_icl.py  rsync_pull.sh  (+3 more)
(+64 files in other folders)
