[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monkeys"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "numpy>=1.26,<2.0",
  "pandas>=2.2,<3.0",
  "scipy>=1.13,<2.0",
  "scikit-learn>=1.5,<2.0",
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.8,<3.10",
  "seaborn>=0.13,<0.14",
]
io = [
  "pyarrow>=16,<19",
  "fsspec>=2024.6.0",
]
hf = [
  "datasets>=2.20,<3.0",
  "huggingface_hub>=0.24,<0.28",
  "protobuf>=4.25,<6",
  "sentencepiece>=0.1.99,<0.2",
]

[tool.setuptools.packages.find]
include = ["monkeys*"]
exclude = ["experiments*"]
